# ai-lab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: artifact-card-failure-modes-contrast-v1-scaffold.md  artifact-card-failure-modes-evidence-v1-run-2026-04-30.md  artifact-card-failure-modes-evidence-v1-scaffold.md  artifact-card-failure-modes-forced-top2-v2-proposal.md  artifact-card-failure-modes-forced-top2-v2-scaffold.md  artifact-card-failure-modes-forced-top2-v2p1-scaffold.md  artifact-card-failure-modes-forced-top2-v3-scaffold.md  artifact-card-failure-modes-joint-rank-v1-scaffold.md  artifact-card-failure-modes-rank-select-v1-scaffold.md  artifact-card-failure-modes-rank-select-v2-scaffold.md  autoresearch-artifact-card-playbook.md  autoresearch-karpathy-and-training-patch-2026-05-01.md  fine-tuning-improvement-strategies-2026-04-30.md  fine-tuning-no-improvement-root-cause-review-2026-04-29.md  first-artifact-card-experiment.md  first-fine-tuning-use-case-recommendation-2026-04-30.md  first-unsloth-experiment.md  model-swap-qwen3-vs-gemma3-2026-05-01.md  profile-portability.md  start-here.md  unsloth-self-learning-path.md
modal/: hello_gpu.py  train_unsloth_artifact_card.py  train_unsloth_tutor.py
scripts/: bootstrap-python.sh  build_failure_mode_contrast_dataset.py  build_failure_mode_contrast_v2_dataset.py  build_failure_mode_evidence_dataset.py  build_failure_mode_forced_top2_v2_dataset.py  build_failure_mode_forced_top2_v2p1_dataset.py  build_failure_mode_forced_top2_v2p2_dataset.py  build_failure_mode_forced_top2_v3_dataset.py  (+15 more)
(+526 files in other folders)
